fix vercel code issue

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "json-server": "json-server --watch db.json --port 5000",
-    "lint": "next lint"
+    "lint": "next lint",
+    "dev-server": "concurrently \"yarn run json-server\" \"yarn run dev\"",
+    "build-server": "concurrently \"yarn run json-server\" \"yarn run build\""
   },
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
