--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "json-server": "json-server --watch db.json --port 5000",
+    "lint": "next lint",
+    "dev-server": "concurrently \"yarn run json-server\" \"yarn run dev\"",
+    "build-server": "concurrently \"yarn run json-server\" \"yarn run build\""
   },
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
