--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "json-server": "json-server --watch db.json --port 5000",
-    "build": "json-server --watch db.json --port 5000 && next build ",
-    "start": "json-server --watch db.json --port 5000 && next dev",
+    "build": "next build",
+    "start": "next start",
     "lint": "next lint",
-    "dev-server": "yarn run json-server && yarn run dev",
-    "build-server": "yarn run json-server && yarn run build"
+    "json-server": "json-server --watch db.json --port 5000",
+    "dev-server": "concurrently \"json-server --watch db.json --port 5000\" \"next dev\"",
+    "build-server": "concurrently \"json-server --watch db.json --port 5000\" \"next build\""
   },
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
